[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "survey_tools"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "pytest",
]
requires-python = ">=3.8"
authors = [
    {name = "Alex Bass", email = "acbass49@gmail.com"},
]
maintainers = [
    {name = "Alex Bass", email = "acbass49@gmail.com"},
]
description = "Tools for Survey Wrangling and Analysis for Users of Pandas"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["Survey Research", "Crosstabs", "Survey", "Recode"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/acbass49/survey_tools"
Issues = "https://github.com/acbass49/survey_tools/issues"
Vinette = "https://alexbass.me/projects/survey_tools/"
